# Copyright (c) 2020-2021 The reone project contributors

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

set(GAME_HEADERS
    action.h
    action/attack.h
    action/barkstring.h
    action/castfakespellatlocation.h
    action/castfakespellatobject.h
    action/castspellatobject.h
    action/closedoor.h
    action/docommand.h
    action/equipitem.h
    action/equipmostdamagingmelee.h
    action/equipmostdamagingranged.h
    action/factory.h
    action/follow.h
    action/followleader.h
    action/followowner.h
    action/giveitem.h
    action/interactobject.h
    action/jumptolocation.h
    action/jumptoobject.h
    action/locationaction.h
    action/lockobject.h
    action/moveawayfromobject.h
    action/movetolocation.h
    action/movetoobject.h
    action/movetopoint.h
    action/objectaction.h
    action/opencontainer.h
    action/opendoor.h
    action/openlock.h
    action/pauseconversation.h
    action/playanimation.h
    action/randomwalk.h
    action/resumeconversation.h
    action/startconversation.h
    action/surrendertoenemies.h
    action/switchweapons.h
    action/takeitem.h
    action/unequipitem.h
    action/unlockobject.h
    action/usefeat.h
    action/useskill.h
    action/usetalentonobject.h
    action/wait.h
    animationutil.h
    camera.h
    camera/animated.h
    camera/dialog.h
    camera/firstperson.h
    camera/static.h
    camera/thirdperson.h
    camerastyle.h
    camerastyles.h
    character.h
    combat.h
    contextaction.h
    cursors.h
    d20/attributes.h
    d20/class.h
    d20/classes.h
    d20/feat.h
    d20/feats.h
    d20/savingthrows.h
    d20/skill.h
    d20/skills.h
    d20/spell.h
    d20/spells.h
    debug.h
    dialog.h
    dialogs.h
    effect.h
    effect/abilitydecrease.h
    effect/abilityincrease.h
    effect/acdecrease.h
    effect/acincrease.h
    effect/assuredhit.h
    effect/attackdecrease.h
    effect/attackincrease.h
    effect/beam.h
    effect/blasterdeflectionincrease.h
    effect/blind.h
    effect/bodyfuel.h
    effect/choke.h
    effect/crush.h
    effect/cutscenehorrified.h
    effect/cutsceneparalyze.h
    effect/cutscenestunned.h
    effect/damage.h
    effect/damagedecrease.h
    effect/damageforcepoints.h
    effect/damageimmunityincrease.h
    effect/damageincrease.h
    effect/damageresistance.h
    effect/death.h
    effect/disguise.h
    effect/droidscramble.h
    effect/droidstun.h
    effect/entangle.h
    effect/factionmodifier.h
    effect/factory.h
    effect/forcebody.h
    effect/forcefizzle.h
    effect/forcepushed.h
    effect/forcepushtargeted.h
    effect/forceresistanceincrease.h
    effect/forceresisted.h
    effect/forceshield.h
    effect/forcesight.h
    effect/fury.h
    effect/heal.h
    effect/healforcepoints.h
    effect/horrified.h
    effect/immunity.h
    effect/invisibility.h
    effect/lightsaberthrow.h
    effect/linkeffects.h
    effect/mindtrick.h
    effect/modifyattacks.h
    effect/movementspeeddecrease.h
    effect/movementspeedincrease.h
    effect/paralyze.h
    effect/poison.h
    effect/psychicstatic.h
    effect/regenerate.h
    effect/resurrection.h
    effect/savingthrowdecrease.h
    effect/savingthrowincrease.h
    effect/skillincrease.h
    effect/sleep.h
    effect/stunned.h
    effect/temporaryforcepoints.h
    effect/temporaryhitpoints.h
    effect/trueseeing.h
    effect/visual.h
    effect/vpregenmodifier.h
    effect/whirlwind.h
    event.h
    footstepsounds.h
    format/ltrreader.h
    format/lytreader.h
    format/ssfreader.h
    format/ssfwriter.h
    format/visreader.h
    game.h
    gui.h
    gui/console.h
    gui/loadscreen.h
    gui/map.h
    gui/profileoverlay.h
    guisounds.h
    kotor.h
    kotor/gui/barkbubble.h
    kotor/gui/chargen.h
    kotor/gui/chargen/abilities.h
    kotor/gui/chargen/classselect.h
    kotor/gui/chargen/custom.h
    kotor/gui/chargen/feats.h
    kotor/gui/chargen/levelup.h
    kotor/gui/chargen/nameentry.h
    kotor/gui/chargen/portraitselect.h
    kotor/gui/chargen/quick.h
    kotor/gui/chargen/quickorcustom.h
    kotor/gui/chargen/skills.h
    kotor/gui/computer.h
    kotor/gui/console.h
    kotor/gui/container.h
    kotor/gui/conversation.h
    kotor/gui/dialog.h
    kotor/gui/hud.h
    kotor/gui/ingame.h
    kotor/gui/ingame/abilities.h
    kotor/gui/ingame/character.h
    kotor/gui/ingame/equip.h
    kotor/gui/ingame/inventory.h
    kotor/gui/ingame/journal.h
    kotor/gui/ingame/map.h
    kotor/gui/ingame/messages.h
    kotor/gui/ingame/options.h
    kotor/gui/loadscreen.h
    kotor/gui/mainmenu.h
    kotor/gui/map.h
    kotor/gui/partyselect.h
    kotor/gui/profileoverlay.h
    kotor/gui/saveload.h
    kotor/gui/selectoverlay.h
    kotor/script/routine/argutil.h
    kotor/script/routine/context.h
    kotor/script/routine/declarations.h
    kotor/script/routine/objectutil.h
    kotor/script/routines.h
    layout.h
    layouts.h
    location.h
    object.h
    object/area.h
    object/creature.h
    object/door.h
    object/encounter.h
    object/factory.h
    object/item.h
    object/module.h
    object/placeable.h
    object/placeablecamera.h
    object/sound.h
    object/trigger.h
    object/waypoint.h
    options.h
    party.h
    path.h
    pathfinder.h
    paths.h
    player.h
    portrait.h
    portraits.h
    reputes.h
    room.h
    savedgame.h
    script/runner.h
    services.h
    soundsets.h
    surface.h
    surfaces.h
    talent.h
    types.h
    visibilities.h)

set(GAME_SOURCES
    action.cpp
    action/attack.cpp
    action/barkstring.cpp
    action/castfakespellatlocation.cpp
    action/castfakespellatobject.cpp
    action/castspellatobject.cpp
    action/closedoor.cpp
    action/docommand.cpp
    action/equipitem.cpp
    action/equipmostdamagingmelee.cpp
    action/equipmostdamagingranged.cpp
    action/follow.cpp
    action/followleader.cpp
    action/followowner.cpp
    action/giveitem.cpp
    action/interactobject.cpp
    action/jumptolocation.cpp
    action/jumptoobject.cpp
    action/lockobject.cpp
    action/moveawayfromobject.cpp
    action/movetolocation.cpp
    action/movetoobject.cpp
    action/movetopoint.cpp
    action/opencontainer.cpp
    action/opendoor.cpp
    action/openlock.cpp
    action/pauseconversation.cpp
    action/playanimation.cpp
    action/randomwalk.cpp
    action/resumeconversation.cpp
    action/startconversation.cpp
    action/surrendertoenemies.cpp
    action/switchweapons.cpp
    action/takeitem.cpp
    action/unequipitem.cpp
    action/unlockobject.cpp
    action/usefeat.cpp
    action/useskill.cpp
    action/usetalentonobject.cpp
    action/wait.cpp
    animationutil.cpp
    camera.cpp
    camera/animated.cpp
    camera/dialog.cpp
    camera/firstperson.cpp
    camera/static.cpp
    camera/thirdperson.cpp
    camerastyles.cpp
    combat.cpp
    cursors.cpp
    d20/attributes.cpp
    d20/class.cpp
    d20/classes.cpp
    d20/feats.cpp
    d20/skills.cpp
    d20/spells.cpp
    debug.cpp
    dialogs.cpp
    effect.cpp
    effect/abilitydecrease.cpp
    effect/abilityincrease.cpp
    effect/acdecrease.cpp
    effect/acincrease.cpp
    effect/assuredhit.cpp
    effect/attackdecrease.cpp
    effect/attackincrease.cpp
    effect/beam.cpp
    effect/blasterdeflectionincrease.cpp
    effect/blind.cpp
    effect/bodyfuel.cpp
    effect/choke.cpp
    effect/crush.cpp
    effect/cutscenehorrified.cpp
    effect/cutsceneparalyze.cpp
    effect/cutscenestunned.cpp
    effect/damage.cpp
    effect/damagedecrease.cpp
    effect/damageforcepoints.cpp
    effect/damageimmunityincrease.cpp
    effect/damageincrease.cpp
    effect/damageresistance.cpp
    effect/death.cpp
    effect/disguise.cpp
    effect/droidscramble.cpp
    effect/droidstun.cpp
    effect/entangle.cpp
    effect/factionmodifier.cpp
    effect/forcebody.cpp
    effect/forcefizzle.cpp
    effect/forcepushed.cpp
    effect/forcepushtargeted.cpp
    effect/forceresistanceincrease.cpp
    effect/forceresisted.cpp
    effect/forceshield.cpp
    effect/forcesight.cpp
    effect/fury.cpp
    effect/heal.cpp
    effect/healforcepoints.cpp
    effect/horrified.cpp
    effect/immunity.cpp
    effect/invisibility.cpp
    effect/lightsaberthrow.cpp
    effect/linkeffects.cpp
    effect/mindtrick.cpp
    effect/modifyattacks.cpp
    effect/movementspeeddecrease.cpp
    effect/movementspeedincrease.cpp
    effect/paralyze.cpp
    effect/poison.cpp
    effect/psychicstatic.cpp
    effect/regenerate.cpp
    effect/resurrection.cpp
    effect/savingthrowdecrease.cpp
    effect/savingthrowincrease.cpp
    effect/skillincrease.cpp
    effect/sleep.cpp
    effect/stunned.cpp
    effect/temporaryforcepoints.cpp
    effect/temporaryhitpoints.cpp
    effect/trueseeing.cpp
    effect/visual.cpp
    effect/vpregenmodifier.cpp
    effect/whirlwind.cpp
    footstepsounds.cpp
    format/ltrreader.cpp
    format/lytreader.cpp
    format/ssfreader.cpp
    format/ssfwriter.cpp
    format/visreader.cpp
    game.cpp
    gui.cpp
    guisounds.cpp
    kotor.cpp
    kotor/gui/barkbubble.cpp
    kotor/gui/chargen.cpp
    kotor/gui/chargen/abilities.cpp
    kotor/gui/chargen/classselect.cpp
    kotor/gui/chargen/custom.cpp
    kotor/gui/chargen/feats.cpp
    kotor/gui/chargen/levelup.cpp
    kotor/gui/chargen/nameentry.cpp
    kotor/gui/chargen/portraitselect.cpp
    kotor/gui/chargen/quick.cpp
    kotor/gui/chargen/quickorcustom.cpp
    kotor/gui/chargen/skills.cpp
    kotor/gui/computer.cpp
    kotor/gui/console.cpp
    kotor/gui/container.cpp
    kotor/gui/conversation.cpp
    kotor/gui/dialog.cpp
    kotor/gui/hud.cpp
    kotor/gui/ingame.cpp
    kotor/gui/ingame/abilities.cpp
    kotor/gui/ingame/character.cpp
    kotor/gui/ingame/equip.cpp
    kotor/gui/ingame/inventory.cpp
    kotor/gui/ingame/journal.cpp
    kotor/gui/ingame/map.cpp
    kotor/gui/ingame/messages.cpp
    kotor/gui/ingame/options.cpp
    kotor/gui/loadscreen.cpp
    kotor/gui/mainmenu.cpp
    kotor/gui/map.cpp
    kotor/gui/partyselect.cpp
    kotor/gui/profileoverlay.cpp
    kotor/gui/saveload.cpp
    kotor/gui/selectoverlay.cpp
    kotor/script/routine/argutil.cpp
    kotor/script/routine/impl/action.cpp
    kotor/script/routine/impl/effect.cpp
    kotor/script/routine/impl/main.cpp
    kotor/script/routine/impl/minigame.cpp
    kotor/script/routines.cpp
    layouts.cpp
    object.cpp
    object/area.cpp
    object/creature.cpp
    object/door.cpp
    object/encounter.cpp
    object/factory.cpp
    object/item.cpp
    object/module.cpp
    object/placeable.cpp
    object/placeablecamera.cpp
    object/sound.cpp
    object/trigger.cpp
    object/waypoint.cpp
    party.cpp
    pathfinder.cpp
    paths.cpp
    player.cpp
    portraits.cpp
    reputes.cpp
    room.cpp
    script/runner.cpp
    soundsets.cpp
    surfaces.cpp
    visibilities.cpp)

add_library(game STATIC ${GAME_HEADERS} ${GAME_SOURCES} ${CLANG_FORMAT_PATH})
set_target_properties(game PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
target_precompile_headers(game PRIVATE ${CMAKE_SOURCE_DIR}/src/pch.h)
target_link_libraries(game PUBLIC script gui scene movie audio graphics resource common)
