# Copyright (c) 2020-2022 The reone project contributors

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

set(GAME_HEADERS
    action.h
    action/attackobject.h
    action/barkstring.h
    action/castfakespellatlocation.h
    action/castfakespellatobject.h
    action/castspellatobject.h
    action/closedoor.h
    action/docommand.h
    action/equipitem.h
    action/equipmostdamagingmelee.h
    action/equipmostdamagingranged.h
    action/follow.h
    action/followleader.h
    action/followowner.h
    action/giveitem.h
    action/interactobject.h
    action/jumptolocation.h
    action/jumptoobject.h
    action/lockobject.h
    action/moveawayfromobject.h
    action/movetolocation.h
    action/movetoobject.h
    action/movetopoint.h
    action/opencontainer.h
    action/opendoor.h
    action/openlock.h
    action/pauseconversation.h
    action/playanimation.h
    action/randomwalk.h
    action/resumeconversation.h
    action/startconversation.h
    action/surrendertoenemies.h
    action/switchweapons.h
    action/takeitem.h
    action/unequipitem.h
    action/unlockobject.h
    action/usefeat.h
    action/useskill.h
    action/usetalentonobject.h
    action/wait.h
    astar.h
    camerastyle.h
    camerastyles.h
    conversation.h
    cursors.h
    debug.h
    effect.h
    effect/abilitydecrease.h
    effect/abilityincrease.h
    effect/acdecrease.h
    effect/acincrease.h
    effect/assuredhit.h
    effect/attackdecrease.h
    effect/attackincrease.h
    effect/beam.h
    effect/blasterdeflectionincrease.h
    effect/blind.h
    effect/bodyfuel.h
    effect/choke.h
    effect/crush.h
    effect/cutscenehorrified.h
    effect/cutsceneparalyze.h
    effect/cutscenestunned.h
    effect/damage.h
    effect/damagedecrease.h
    effect/damageforcepoints.h
    effect/damageimmunityincrease.h
    effect/damageincrease.h
    effect/damageresistance.h
    effect/death.h
    effect/disguise.h
    effect/droidscramble.h
    effect/droidstun.h
    effect/entangle.h
    effect/factionmodifier.h
    effect/forcebody.h
    effect/forcefizzle.h
    effect/forcepushed.h
    effect/forcepushtargeted.h
    effect/forceresistanceincrease.h
    effect/forceresisted.h
    effect/forceshield.h
    effect/forcesight.h
    effect/fury.h
    effect/heal.h
    effect/healforcepoints.h
    effect/horrified.h
    effect/immunity.h
    effect/invisibility.h
    effect/lightsaberthrow.h
    effect/linkeffects.h
    effect/mindtrick.h
    effect/modifyattacks.h
    effect/movementspeeddecrease.h
    effect/movementspeedincrease.h
    effect/paralyze.h
    effect/poison.h
    effect/psychicstatic.h
    effect/regenerate.h
    effect/resurrection.h
    effect/savingthrowdecrease.h
    effect/savingthrowincrease.h
    effect/skillincrease.h
    effect/sleep.h
    effect/stunned.h
    effect/temporaryforcepoints.h
    effect/temporaryhitpoints.h
    effect/trueseeing.h
    effect/visual.h
    effect/vpregenmodifier.h
    effect/whirlwind.h
    event.h
    footstepsounds.h
    format/ltrreader.h
    format/lytreader.h
    format/ssfreader.h
    format/ssfwriter.h
    format/visreader.h
    game.h
    gameinterface.h
    gui/console.h
    gui/dialog.h
    gui/maininterface.h
    gui/mainmenu.h
    guisounds.h
    layout.h
    layouts.h
    location.h
    object.h
    object/area.h
    object/camera.h
    object/creature.h
    object/door.h
    object/encounter.h
    object/factory.h
    object/item.h
    object/module.h
    object/placeable.h
    object/room.h
    object/sound.h
    object/store.h
    object/trigger.h
    object/waypoint.h
    options.h
    path.h
    paths.h
    portrait.h
    portraits.h
    resourcelayout.h
    selectioncontroller.h
    script/routine/argutil.h
    script/routine/context.h
    script/routine/declarations.h
    script/routine/objectutil.h
    script/routines.h
    script/runner.h
    services.h
    soundsets.h
    surface.h
    surfaces.h
    talent.h
    types.h
    visibilities.h)

set(GAME_SOURCES
    action.cpp
    action/movetoobject.cpp
    astar.cpp
    camerastyles.cpp
    conversation.cpp
    cursors.cpp
    debug.cpp
    footstepsounds.cpp
    format/ltrreader.cpp
    format/lytreader.cpp
    format/ssfreader.cpp
    format/ssfwriter.cpp
    format/visreader.cpp
    game.cpp
    gui/console.cpp
    gui/dialog.cpp
    gui/maininterface.cpp
    gui/mainmenu.cpp
    guisounds.cpp
    layouts.cpp
    object.cpp
    object/area.cpp
    object/camera.cpp
    object/creature.cpp
    object/door.cpp
    object/encounter.cpp
    object/item.cpp
    object/module.cpp
    object/placeable.cpp
    object/room.cpp
    object/sound.cpp
    object/store.cpp
    object/trigger.cpp
    object/waypoint.cpp
    paths.cpp
    portraits.cpp
    resourcelayout.cpp
    selectioncontroller.cpp
    script/routine/argutil.cpp
    script/routine/impl/action.cpp
    script/routine/impl/effect.cpp
    script/routine/impl/main.cpp
    script/routine/impl/minigame.cpp
    script/routines.cpp
    script/runner.cpp
    soundsets.cpp
    surfaces.cpp
    visibilities.cpp)

add_library(game STATIC ${GAME_HEADERS} ${GAME_SOURCES} ${CLANG_FORMAT_PATH})
set_target_properties(game PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
target_precompile_headers(game PRIVATE ${CMAKE_SOURCE_DIR}/src/pch.h)
target_link_libraries(game PUBLIC script gui scene movie audio graphics resource common)
